--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -2,27 +2,31 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Tentang Kami</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tentang Kami 👥</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="gradient">
-  <nav>
+<body>
+  <!-- Taskbar -->
+  <nav class="taskbar">
+    <h1>NumerikCalc</h1>
     <ul>
-      <li><a href="index.html">Beranda</a></li>
-      <li><a href="pilih_kaidah.html">Pilih Kaidah</a></li>
-      <li><a href="tentang_kami.html" class="active">Tentang Kami</a></li>
+      <li><a href="index.html">🏠 Beranda</a></li>
+      <li><a href="pilih_kaidah.html">🧠 Pilih Kaidah</a></li>
+      <li><a href="tentang_kami.html">👥 Tentang Kami</a></li>
     </ul>
   </nav>
-  <header><h1>Kelompok 3</h1></header>
+
   <main>
     <section class="card">
+      <h2>Kelompok 3 👥</h2>
       <p>Website ini dibuat oleh Kelompok 3 sebagai Tugas Metode Numerik.</p>
-      <h2>Anggota:</h2>
+      <h3>Anggota:</h3>
       <ul>
         <li>M. Aldian Nurrahman (2303010139)</li>
         <li>M. Fazri Riyadi (2303010124)</li>
       </ul>
-      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">GitHub Aldian</a>
+      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">Kunjungi GitHub Aldian</a>
     </section>
   </main>
 </body>
