--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Numerik Kalkulator 🔢</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NumerikCalc 🔢</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="gradient">
-  <!-- Taskbar -->
+<body>
   <nav class="taskbar">
     <h1>NumerikCalc</h1>
     <ul>
@@ -16,18 +15,12 @@
       <li><a href="tentang_kami.html">👥 Tentang Kami</a></li>
     </ul>
   </nav>
-
   <main>
     <section class="card">
       <h2>Selamat datang! 🎉</h2>
-      <p>Ini adalah kalkulator metode numerik untuk menghitung integral tak tentu maupun tentu menggunakan metode <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
-      <p>Klik "Pilih Kaidah" untuk mulai menggunakan kalkulator.</p>
+      <p>Ini adalah kalkulator metode numerik untuk menghitung integral tentu menggunakan metode <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
       <a href="pilih_kaidah.html" class="button">➡️ Mulai Sekarang</a>
     </section>
   </main>
-
-  <footer>
-    <a href="index.html">🏠 Beranda</a>
-  </footer>
 </body>
 </html>
