--- a/kalkulator.html
+++ b/kalkulator.html
@@ -2,12 +2,10 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kalkulator Metode Numerik 🔢</title>
+  <title>Kalkulator Integrasi</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Taskbar -->
   <nav class="taskbar">
     <h1>NumerikCalc</h1>
     <ul>
@@ -19,27 +17,24 @@
 
   <main>
     <section class="card">
-      <h2 id="subjudul">Kalkulator Integrasi</h2>
+      <h2 id="subjudul">🔢 Kalkulator</h2>
       <label for="fx">Fungsi f(x):</label>
-      <input type="text" id="fx" placeholder="Misal: x^2" />
+      <input type="text" id="fx" placeholder="Contoh: x**2" />
       <label for="a">Batas bawah (a):</label>
-      <input type="number" id="a" placeholder="Misal: 0" />
+      <input type="number" id="a" />
       <label for="b">Batas atas (b):</label>
-      <input type="number" id="b" placeholder="Misal: 1" />
-      <label for="n">Jumlah pias (n):</label>
-      <input type="number" id="n" placeholder="Misal: 4" />
-      <label for="metode">Pilih Metode:</label>
-      <select id="metode">
-        <option value="segiempat">Metode Segi Empat</option>
-        <option value="titik_tengah">Metode Titik Tengah</option>
+      <input type="number" id="b" />
+      <label for="n">Jumlah Pias (n):</label>
+      <input type="number" id="n" />
+      <select id="metode" style="display: none;">
+        <option value="segiempat">Segi Empat</option>
+        <option value="titik_tengah">Titik Tengah</option>
       </select>
       <button id="hitungBtn">Hitung</button>
       <button id="resetBtn">Reset</button>
       <div id="output"></div>
     </section>
   </main>
-
-  <footer><a href="index.html">Beranda</a></footer>
 
   <script src="script.js"></script>
 </body>
