--- a/pilih_kaidah.html
+++ b/pilih_kaidah.html
@@ -19,33 +19,31 @@
   <main>
     <section class="card">
       <h2>📐 Metode Segi Empat</h2>
-      <p>Metode ini menggunakan pembagian interval [a, b] menjadi n subinterval dengan panjang sama. Setiap subinterval dianggap sebagai persegi panjang dengan tinggi f(x) di titik awalnya.</p>
-      <p>
-        <strong>Langkah-langkah:</strong>
-        <ol>
-          <li>Hitung panjang setiap pias (h): <code>h = (b - a) / n</code></li>
-          <li>Tentukan titik <code>x<sub>i</sub> = a + i * h</code> untuk tiap pias</li>
-          <li>Hitung <code>f(x<sub>i</sub>)</code> untuk tiap pias</li>
-          <li>Kalikan dengan <code>h</code> untuk dapatkan luas tiap pias</li>
-          <li>Jumlahkan seluruh luas → hasil integral aproksimasi</li>
-        </ol>
-      </p>
+      <p>Metode ini menggunakan pembagian interval [a, b] menjadi n subinterval dengan panjang yang sama. Setiap subinterval dianggap sebagai persegi panjang dengan tinggi f(x) di titik awal subinterval.</p>
+      <p><strong>Langkah-langkah:</strong></p>
+      <ol>
+        <li>Tentukan fungsi f(x) yang akan dihitung integralnya.</li>
+        <li>Tentukan batas bawah (a) dan batas atas (b) dari integral.</li>
+        <li>Tentukan jumlah subinterval (n) untuk pembagian interval.</li>
+        <li>Hitung panjang tiap subinterval, yaitu h = (b - a) / n.</li>
+        <li>Hitung nilai integral dengan rumus:</li>
+        <pre>Integral ≈ h × Σ f(xi), untuk i = 0 hingga n-1, dengan xi = a + i × h</pre>
+      </ol>
       <a href="kalkulator.html?metode=segiempat" class="button">🔢 Gunakan Segi Empat</a>
     </section>
 
     <section class="card">
       <h2>🎯 Metode Titik Tengah</h2>
-      <p>Mirip dengan metode segi empat, tetapi tinggi setiap persegi panjang dihitung dari titik tengah subinterval. Lebih akurat dari metode segi empat standar.</p>
-      <p>
-        <strong>Langkah-langkah:</strong>
-        <ol>
-          <li>Hitung panjang pias (h): <code>h = (b - a) / n</code></li>
-          <li>Tentukan titik tengah <code>x<sub>i</sub> = a + (i + 0.5) * h</code></li>
-          <li>Hitung <code>f(x<sub>i</sub>)</code> di titik tengah tiap pias</li>
-          <li>Kalikan dengan <code>h</code> → luas tiap pias</li>
-          <li>Jumlahkan seluruh luas → hasil integral aproksimasi</li>
-        </ol>
-      </p>
+      <p>Mirip dengan metode segi empat, tetapi titik untuk menghitung tinggi setiap persegi panjang dihitung dari titik tengah subinterval. Ini membuat metode Titik Tengah lebih akurat dari metode Segi Empat standar.</p>
+      <p><strong>Langkah-langkah:</strong></p>
+      <ol>
+        <li>Tentukan fungsi f(x) yang akan dihitung integralnya.</li>
+        <li>Tentukan batas bawah (a) dan batas atas (b) dari integral.</li>
+        <li>Tentukan jumlah subinterval (n) untuk pembagian interval.</li>
+        <li>Hitung panjang tiap subinterval, yaitu h = (b - a) / n.</li>
+        <li>Hitung nilai integral dengan rumus:</li>
+        <pre>Integral ≈ h × Σ f(xi), untuk i = 0 hingga n-1, dengan xi = a + (i + 0.5) × h</pre>
+      </ol>
       <a href="kalkulator.html?metode=titik_tengah" class="button">🔢 Gunakan Titik Tengah</a>
     </section>
   </main>
