--- a/kalkulator.html
+++ b/kalkulator.html
@@ -2,12 +2,13 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kalkulator Integrasi</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav class="taskbar">
-    <h1>NumerikCalc</h1>
+    <h1>🔢 NumerikCalc</h1>
     <ul>
       <li><a href="index.html">🏠 Beranda</a></li>
       <li><a href="pilih_kaidah.html">🧠 Pilih Kaidah</a></li>
@@ -17,18 +18,19 @@
 
   <main>
     <section class="card">
-      <h2 id="subjudul">🔢 Kalkulator</h2>
+      <h2 id="subjudul">🔢 Kalkulator Integrasi</h2>
       <label for="fx">Fungsi f(x):</label>
-      <input type="text" id="fx" placeholder="Contoh: x**2" />
+      <input type="text" id="fx" placeholder="Misal: x**2" />
       <label for="a">Batas bawah (a):</label>
       <input type="number" id="a" />
       <label for="b">Batas atas (b):</label>
       <input type="number" id="b" />
-      <label for="n">Jumlah Pias (n):</label>
+      <label for="n">Jumlah pias (n):</label>
       <input type="number" id="n" />
-      <select id="metode" style="display: none;">
-        <option value="segiempat">Segi Empat</option>
-        <option value="titik_tengah">Titik Tengah</option>
+      <label for="metode">Pilih Metode:</label>
+      <select id="metode">
+        <option value="segiempat">Metode Segi Empat</option>
+        <option value="titik_tengah">Metode Titik Tengah</option>
       </select>
       <button id="hitungBtn">Hitung</button>
       <button id="resetBtn">Reset</button>
