--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NumerikCalc 🔢</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Numerik Kalkulator 🔢</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav class="taskbar">
-    <h1>NumerikCalc</h1>
+    <h1>🔢 NumerikCalc</h1>
     <ul>
       <li><a href="index.html">🏠 Beranda</a></li>
       <li><a href="pilih_kaidah.html">🧠 Pilih Kaidah</a></li>
       <li><a href="tentang_kami.html">👥 Tentang Kami</a></li>
     </ul>
   </nav>
+
   <main>
     <section class="card">
       <h2>Selamat datang! 🎉</h2>
-      <p>Ini adalah kalkulator metode numerik untuk menghitung integral tentu menggunakan metode <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
+      <p>Gunakan kalkulator metode numerik untuk menghitung integral tentu dengan metode yang tersedia.</p>
       <a href="pilih_kaidah.html" class="button">➡️ Mulai Sekarang</a>
     </section>
   </main>
