--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="taskbar">
-    <h1>NumerikCalc</h1>
+    <h1>Kalkultor Metode numerik - Kelompok 3</h1>
     <ul>
       <li><a href="index.html">🏠 Beranda</a></li>
       <li><a href="pilih_kaidah.html">🧠 Pilih Kaidah</a></li>
@@ -56,7 +56,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 NumerikCalc - Semua Hak Cipta Dilindungi</p>
+    <p>&copy; 2025 Kalkultor Metode numerik - Kelompok 3</p>
   </footer>
 </body>
 </html>
